--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -67,6 +67,7 @@ spamd_flags=NO		# also see spamd_black below
 spamlogd_flags=		# use eg. "-i interface" and see spamlogd(8)
 sshd_flags=
 syslogd_flags=		# add more flags, e.g. "-u -a /chroot/dev/log"
+tcpbench_flags=NO
 tftpd_flags=NO
 tftpproxy_flags=NO
 unbound_flags=NO
