--- a/regress/libexec/ftpd/Makefile
+++ b/regress/libexec/ftpd/Makefile
@@ -42,7 +42,7 @@ setup-ftpd:
 	${SUDO} pkill tcpserver || true
 	${SUDO} pkill ftpd || true
 	# start ftpd
-	${SUDO} ${TCPSERVER} 127.0.0.1 21 ${KTRACE} ${FTPD} -A -d & \
+	${SUDO} ${TCPSERVER} 127.0.0.1 21 ${KTRACE} ${FTPD} -A -d -s & \
 	    timeout=$$(($$(date +%s) + 5)); \
 	    while fstat -p $$! | ! grep -q 'tcp .* 127.0.0.1:21$$'; \
 		do test $$(date +%s) -lt $$timeout || exit 1; done
